Fix unnecessary scrollbar on welcome page for Firefox

--- a/resources/assets/sass/pages/_welcome.scss
+++ b/resources/assets/sass/pages/_welcome.scss
@@ -56,7 +56,7 @@
         //top: 37px;
         height: calc(100% - 65px);
         @media (min-width: $breakpoint3) {
-            max-height: 550px;
+            max-height: 555px;
             //.mCSB_outside {
             //    display: flex;
             //    align-items: center;
